--- a/sass/site/compatibility/woocommerce/woocommerce-grid.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce-grid.scss
@@ -151,9 +151,9 @@ p.demo_store,
         display: block;
         line-height: 1.618;
         transition: all 0.3s ease;
-		border-top: 20px solid transparent;
         opacity: 0;
         visibility: hidden;
+		transition: all 0.3s ease;
 
     	&:after,
     	&:before {
