--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -146,10 +146,9 @@ p.demo_store,
         left: -999em;
         display: block;
         line-height: 1.618;
-        transition: all 0.3s ease;
-		border-top: 20px solid transparent;
         opacity: 0;
         visibility: hidden;
+		transition: all 0.3s ease;
 
     	&:after,
     	&:before {
@@ -261,6 +260,15 @@ p.demo_store,
 			}
 		}
     }
+}
+
+.ast-site-header-cart {
+	&:focus, &:hover {
+		.widget_shopping_cart {
+			opacity: 1;
+			visibility: visible;
+		}
+	}
 }
 
 .ast-above-header-wrap,
